Created friendships and wrote some user-friend tests and added Ahoulda to test group

--- a/test/fixtures/users.yml
+++ b/test/fixtures/users.yml
@@ -9,3 +9,9 @@ tim:
     last_name: "Brady"
     email: "tbrady@gmail.com"
     profile_name: "tbrady"
+
+miwa: 
+    first_name: "Miwa"
+    last_name: "Miwach"
+    email: "miwa@gmail.com"
+    profile_name: "miwach"
